--- a/web_fiction_tracker/static/style.css
+++ b/web_fiction_tracker/static/style.css
@@ -11,6 +11,7 @@ h2              { font-size: 1.2em; }
 .entries li h2  { margin-left: -1em; }
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
+.filter			{ font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
 .flash          { background: #cee5F5; padding: 0.5em;
