--- a/web_fiction_tracker/templates/layout.html
+++ b/web_fiction_tracker/templates/layout.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<title>Webfiction scrapper</title>
+<title>Webfiction tracker</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>Webfiction scrapper</h1>
+  <h1>Webfiction tracker</h1>
   <div class=metanav>
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
