Chapter altering, hidind. Not showing loading bar, currently

--- a/web_fiction_tracker/templates/layout.html
+++ b/web_fiction_tracker/templates/layout.html
@@ -15,3 +15,11 @@
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
+
+<script type="text/javascript">// <![CDATA[
+        function loading(){
+            document.getElementById("loading").style.display = "none";
+            document.getElementById("content").style.display = "block";
+        }//preloader
+        //window.onload = preloader;
+// ]]></script>
