--- a/web_fiction_tracker/templates/show_entries.html
+++ b/web_fiction_tracker/templates/show_entries.html
@@ -24,7 +24,7 @@
 
   <form action="{{ url_for('refresh') }}" method=post class=add-entry>
     <dl>
-      <dd><input type=submit name=refresh_button value=Refresh onclick="loading();">
+      <dd><input type=submit name=refresh_button value=Refresh>
     </dl>
   </form>
 
